# crawler

./: .gitignore  alembic.ini  pyproject.toml  pytest.ini
docs/: README.md  cli-interface.md  core-components.md  data-formats.md  firecrawl-api.md  native-api.md  system-architecture.md
examples/: basic_usage.md
groundtruth/: crawl4ai_context.md  firecrawl-openapi.json
requirements/: base.txt  dev.txt  prod.txt
scripts/setup/: init_db.py
scripts/testing/: run_tests.sh
src/crawler/: __init__.py  main.py  version.py
src/crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/crawler/cli/: main.py
src/crawler/cli/commands/: __init__.py  batch.py  config.py  crawl.py  scrape.py  session.py  status.py
src/crawler/core/: __init__.py  engine.py  jobs.py  storage.py
src/crawler/database/: connection.py
src/crawler/database/migrations/: __init__.py  env.py
src/crawler/database/migrations/versions/: 001_initial_schema.py
src/crawler/database/models/: __init__.py  base.py  cache.py  crawl_results.py  jobs.py  sessions.py
src/crawler/foundation/: config.py  errors.py  logging.py  metrics.py
src/crawler/models/: __init__.py  common.py  config.py  crawl.py  scrape.py  session.py
src/crawler/services/: __init__.py  crawl.py  scrape.py  session.py
tests/: __init__.py  conftest.py  refactoring_specs.md  test_specifications.md
tests/fixtures/configs/: default.yaml  invalid.yaml  news_profile.yaml
tests/fixtures/js/: click_load_more.js
tests/fixtures/responses/: error_response.json  success_response.json
tests/fixtures/sample_pages/: complex.html  simple.html
tests/fixtures/schemas/: news_article.json
tests/fixtures/templates/: article.md.j2
tests/fixtures/urls/: test_urls.csv  test_urls.txt
tests/integration/: test_failure_scenarios.py  test_phase1_end_to_end.py
tests/performance/: test_batch_benchmark.py  test_concurrent_benchmark.py
tests/refactoring/: test_edge_cases_comprehensive.py  test_engine_refactoring.py  test_performance_benchmarks.py
tests/unit/cli/: test_commands_implementation.py  test_crawl_command.py  test_main.py
tests/unit/core/: test_engine.py  test_job_manager.py  test_network_edge_cases.py
tests/unit/database/: test_edge_cases.py  test_storage_operations.py
tests/unit/foundation/: test_config.py  test_errors.py  test_validation_edge_cases.py
tests/unit/models/: test_scrape_models.py
tests/unit/services/: test_crawl.py  test_scrape.py
